--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  background-image: url('71OsZKuF+8L._AC_SX679_.jpg');
+  background-image: url('6020105.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
